# AI-Vtuber

./: .gitignore  README.md  UI_main.py  api.py  bak_config_data.py  bilibili.py  bilibili2.py  config.json  config.json.bak  config1.json  douyu.py  dy.py  dy2.py  ks.py  main-old.py  main.py  overrides.txt  pyproject.toml  requirements.txt  requirements_bilibili.txt  requirements_common.txt  requirements_douyu.txt  requirements_dy.txt  requirements_ks.txt  requirements_talk.txt  requirements_twitch.txt  requirements_youtube.txt  talk.py  tiktok.py  twitch.py  webui.py  wxlive.py  youtube.py
.github/ISSUE_TEMPLATE/: template-bug.md  template-bug.yml  template-feature.yml  template-question.md  template-question.yml
Scripts/: 2-1.强制更新至主线版本（得先安装git）.bat  2-2.安装依赖.bat
Scripts/直播ws脚本/: pdd重定向.js  洛曦 直播弹幕监听 转发至本地WS服务端.js  直播弹幕监听 转发至本地WS服务端.js
data/: badwords.txt  tiktok礼物价格表.json  本地问答库.json
data/动态文案2/: AI-Vtuber介绍.txt
docs/: AI Vtuber.xmind
docs/投资人/: index.html
protobuf/douyin/: __init__.py
sensevoice/: requirements.txt
static/: index.html
tests/test_aibote/: aibote.py
tests/test_blivedm/: 2.py
tests/test_chatgpt/: api.py
tests/test_cosyvoice/: api.py  gradio_api.py
tests/test_coze/: cn.py
tests/test_dify/: api.py
tests/test_faster_whisper/: realtime.py
tests/test_fish_speech/: web_api.py
tests/test_gemini/: api.py
tests/test_gpt_sovits/: api_0706.py  api_v3.py
tests/test_gradio/: api.py  f5_tts.py
tests/test_llm_tpu/: gradio_api.py
tests/test_multitts/: api.py
tests/test_qanything/: api.py
tests/test_sensevoice/: demo.py
tests/test_tiktok/: tiktok.py  v6.2.py  v6.py
tests/test_tongyi/: tongyi.py
tests/test_volcengine/: api.py
tests/test_xingchen/: api.py
tests/test_zhipu/: api.py  app_api.py  assistant.py  charglm-3.py
ui/: main.ui
utils/: audio.py  common.py  data_analysis.py  logger.py  models.py  my_handle.py  my_log.py  my_translate.py  sd.py  search_engine.py  serial_manager.py  serial_manager_instance.py  video.py
utils/audio_handle/: my_tts.py
utils/gpt_model/: alice.py  anythingllm.py  bard.py  blip.py  chatglm.py  chatgpt.py  claude.py  claude2.py  custom_llm.py  dify.py  gemini.py  gpt.py  gpt4free.py  koboldcpp.py  langchain_chatchat.py  langchain_chatglm.py  llm_tpu.py  my_qianfan.py  my_wenxinworkshop.py  qanything.py  qwen.py  sparkdesk.py  text_generation_webui.py  tongyi.py  tongyixingchen.py  volcengine.py  yiyan.py  zhipu.py
utils/luoxi_project/: live_comment_assistant.py
