[tool.poetry]
name = "ai-vtuber"
version = "0.30.0"
description = "AI Vtuber，结合ASR、LLM、TTS、SVC、SD等功能为一体的开源AI软件"
authors = ["ikaros <327209194@qq.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aenum = ">=3.1.15"
aiofiles = ">=23.2.1"
aiohttp = ">=3.9.5"
aiohttp-socks = ">=0.8.4"
aiolimiter = ">=1.1.0"
aiosignal = ">=1.3.1"
aliyun-python-sdk-core = ">=2.15.1"
aliyun-python-sdk-kms = ">=2.16.3"
altair = ">=5.3.0"
analytics-python = ">=1.4.post1"
annotated-types = ">=0.7.0"
anthropic = ">=0.31.2"
antlr4-python3-runtime = ">=4.9.3"
anyio = ">=4.4.0"
apscheduler = ">=3.10.4"
asttokens = ">=2.4.1"
async-timeout = ">=4.0.3"
asyncio = ">=3.4.3"
attrs = ">=23.2.0"
audioread = ">=3.0.1"
av = ">=12.3.0"
azure-cognitiveservices-speech = ">=1.38.0"
babel = ">=2.15.0"
backcall = ">=0.2.0"
backoff = ">=1.10.0"
baidu-aip = ">=4.16.13"
bardapi = ">=1.0.0"
bce-python-sdk = ">=0.9.17"
bcrypt = ">=4.2.0"
beautifulsoup4 = ">=4.12.3"
betterproto = ">=2.0.0b6"
bidict = ">=0.23.1"
bilibili-api = ">=4.1.0"
bilibili-api-dev = ">=16.2.0b1"
blinker = ">=1.8.2"
blis = ">=0.7.11"
blivedm = {git = "https://gitee.com/ikaros-521/blivedm", rev = "c9ac671f783c4c3eaa4ee4e7738226ebbf402259"}
brotli = ">=1.1.0"
brotlipy = ">=0.7.0"
browser-cookie3 = ">=0.19.1"
cachetools = ">=5.4.0"
catalogue = ">=2.0.10"
certifi = ">=2024.7.4"
cffi = ">=1.16.0"
chardet = ">=5.2.0"
charset-normalizer = ">=3.3.2"
click = ">=8.1.7"
colorama = ">=0.4.6"
coloredlogs = ">=15.0.1"
colorlog = ">=6.8.2"
confection = ">=0.1.5"
contourpy = ">=1.2.1"
crcmod = ">=1.7"
cryptography = ">=43.0.0"
cssutils = ">=2.11.1"
ctranslate2 = ">=4.3.1"
curl-cffi = ">=0.7.1"
cycler = ">=0.12.1"
cymem = ">=2.0.8"
dashscope = ">=1.20.3"
dataclasses = ">=0.6"
dataclasses-json = ">=0.6.7"
decorator = ">=5.1.1"
deep-translator = ">=1.11.4"
distro = ">=1.9.0"
docutils = ">=0.19"
easyprocess = ">=1.1"
edge-tts = ">=6.1.12"
editdistance = ">=0.8.1"
einops = ">=0.8.0"
elevenlabs = ">=0.2.8"
emoji = ">=2.12.1"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl"}
entrypoint2 = ">=1.1"
exceptiongroup = ">=1.2.2"
executing = ">=2.0.1"
faiss-cpu = ">=1.8.0.post1"
fake-useragent = ">=1.5.1"
fastapi = ">=0.109.2"
fastapi-socketio = ">=0.0.10"
faster-whisper = ">=1.0.3"
ffmpy = ">=0.3.2"
filelock = ">=3.15.4"
flask = ">=3.0.3"
flask-babel = ">=4.0.0"
flask-cors = ">=4.0.1"
flask-socketio = ">=5.3.6"
flatbuffers = ">=24.3.25"
fonttools = ">=4.53.1"
frozenlist = ">=1.4.1"
fsspec = ">=2024.6.1"
funasr = ">=1.1.3"
future = ">=1.0.0"
g4f = ">=0.3.2.2"
google-ai-generativelanguage = ">=0.6.6"
google-api-core = ">=2.19.1"
google-api-python-client = ">=2.137.0"
google-auth = ">=2.32.0"
google-auth-httplib2 = ">=0.2.0"
google-cloud-core = ">=2.4.1"
google-cloud-translate = ">=3.15.4"
google-generativeai = ">=0.7.2"
googleapis-common-protos = ">=1.63.2"
gptcache = ">=0.1.43"
gradio = ">=3.18.0"
gradio-client = ">=1.1.1"
greenlet = ">=3.0.3"
grpcio = ">=1.65.1"
grpcio-status = ">=1.62.2"
grpclib = ">=0.4.7"
h11 = ">=0.14.0"
h2 = ">=4.1.0"
hpack = ">=4.0.0"
httpcore = ">=1.0.5"
httplib2 = ">=0.22.0"
httptools = ">=0.6.1"
httpx = ">=0.25.2"
huggingface-hub = ">=0.24.2"
humanfriendly = ">=10.0"
hydra-core = ">=1.3.2"
hyperframe = ">=6.0.1"
idna = ">=3.7"
ifaddr = ">=0.2.0"
importlib-resources = ">=6.4.0"
ipython = ">=8.26.0"
itsdangerous = ">=2.2.0"
jaconv = ">=0.3.4"
jamo = ">=0.4.1"
jedi = ">=0.19.1"
jieba = ">=0.42.1"
jinja2 = ">=3.1.4"
jiter = ">=0.5.0"
jmespath = ">=0.10.0"
joblib = ">=1.4.2"
jsonpatch = ">=1.33"
jsonpointer = ">=3.0.0"
jsonschema = ">=4.23.0"
jsonschema-specifications = ">=2023.12.1"
kaldiio = ">=2.18.0"
keyboard = ">=0.13.5"
kiwisolver = ">=1.4.5"
langcodes = ">=3.4.0"
langdetect = ">=1.0.9"
langid = ">=1.1.6"
language-data = ">=1.2.0"
lazy-loader = ">=0.4"
librosa = ">=0.10.2.post1"
linkify-it-py = ">=2.0.3"
llvmlite = ">=0.43.0"
loguru = ">=0.7.2"
lxml = ">=4.9.4"
lz4 = ">=4.3.3"
marisa-trie = ">=1.2.0"
markdown = ">=3.6"
markdown-it-py = ">=3.0.0"
markdown2 = ">=2.5.0"
markupsafe = ">=2.1.5"
marshmallow = ">=3.21.3"
marshmallow-enum = ">=1.5.1"
mashumaro = ">=3.13.1"
mathparse = ">=0.1.2"
matplotlib = ">=3.9.1"
matplotlib-inline = ">=0.1.7"
mdit-py-plugins = ">=0.4.1"
mdurl = ">=0.1.2"
monotonic = ">=1.6"
more-itertools = ">=10.3.0"
mouseinfo = ">=0.1.3"
mpmath = ">=1.3.0"
msgpack = ">=1.0.8"
mss = ">=9.0.1"
multidict = ">=6.0.5"
murmurhash = ">=1.0.10"
mypy-extensions = ">=1.0.0"
networkx = ">=3.3"
nicegui = ">=1.4.25"
nltk = ">=3.8.1"
numba = ">=0.60.0"
numexpr = ">=2.10.1"
numpy = ">=1.26.4"
omegaconf = ">=2.3.0"
onnxruntime = ">=1.18.1"
openai = ">=1.37.0"
openapi-schema-pydantic = ">=1.2.4"
opencv-python = ">=4.10.0.84"
orjson = ">=3.10.6"
oss2 = ">=2.18.6"
outcome = ">=1.3.0.post0"
packaging = ">=24.1"
pandas = ">=2.2.2"
paramiko = ">=3.4.0"
parso = ">=0.8.4"
pathlib-abc = ">=0.1.1"
pathy = ">=0.11.0"
pickleshare = ">=0.7.5"
pillow = ">=10.1.0"
platformdirs = ">=4.2.2"
playwright = ">=1.45.1"
pooch = ">=1.8.2"
preshed = ">=3.0.9"
profanity = ">=1.1"
prompt-toolkit = ">=3.0.47"
proto-plus = ">=1.24.0"
protobuf = ">=4.25.4"
protobuf-inspector = ">=0.2"
protobuf3-to-dict = ">=0.1.5"
pscript = ">=0.7.7"
psutil = ">=6.0.0"
pure-protobuf = ">=3.1.1"
pure-eval = ">=0.2.3"
pyahocorasick = ">=2.1.0"
pyaibote = ">=1.6.6"
pyarrow = ">=17.0.0"
pyasn1 = ">=0.6.0"
pyasn1-modules = ">=0.4.0"
pyaudio = ">=0.2.13"
pyautogui = ">=0.9.54"
pycparser = ">=2.22"
pycryptodome = ">=3.20.0"
pycryptodomex = ">=3.19.1"
pydantic = ">=1.10.17"
pydantic-core = ">=2.20.1"
pydub = ">=0.25.1"
pyee = ">=11.1.0"
pygame = ">=2.6.0"
pygetwindow = ">=0.0.9"
pygments = ">=2.18.0"
pygtrans = ">=1.5.3"
pyhandytools = ">=0.1.7"
pyjwt = ">=2.8.0"
pymsgbox = ">=1.0.9"
pymysql = ">=1.1.1"
pynacl = ">=1.5.0"
pynndescent = ">=0.5.13"
pyparsing = ">=3.1.2"
pypdf = ">=3.11.1"
pypdf2 = ">=3.0.1"
pyperclip = ">=1.9.0"
pypinyin = ">=0.49.0"
pypng = ">=0.20220715.0"
pyqt5-sip = ">=12.12.1"
pyreadline3 = ">=3.4.1"
pyrect = ">=0.2.0"
pyscreenshot = ">=3.1"
pyscreeze = ">=0.1.29"
pyserial = ">=3.5"
pysocks = ">=1.7.1"
pytchat = ">=0.5.5"
python-dateutil = ">=2.9.0.post0"
python-dotenv = ">=1.0.1"
python-engineio = ">=4.9.1"
python-gemini-api = ">=2.4.12"
python-multipart = ">=0.0.9"
python-socketio = ">=5.11.3"
python-socks = ">=2.5.0"
pytorch-wpe = ">=0.0.1"
pytweening = ">=1.0.7"
pytz = ">=2024.1"
pyvirtualcam = ">=0.10.2"
pywin32 = ">=306"
pyyaml = ">=6.0.1"
qrcode = ">=7.4.2"
qrcode-terminal = ">=0.8"
qt5-applications = ">=5.15.2.2.3"
qt5-tools = ">=5.15.2.1.3"
referencing = ">=0.35.1"
regex = ">=2024.7.24"
requests = ">=2.31.0"
resampy = ">=0.4.3"
revtongyi = ">=0.0.5.0"
rich = ">=13.7.0"
rotary-embedding-torch = ">=0.6.4"
rpds-py = ">=0.19.1"
rsa = ">=4.9"
ruff = ">=0.3.5"
safetensors = ">=0.3.1"
schedule = ">=1.2.0"
scikit-learn = ">=1.3.0"
scipy = ">=1.11.1"
screeninfo = ">=0.8.1"
selenium = ">=4.18.1"
selgym = ">=0.1.6"
send2trash = ">=1.8.2"
sentence-transformers = ">=2.2.2"
sentencepiece = ">=0.1.99"
shellingham = ">=1.5.4"
simple-websocket = ">=1.0.0"
six = ">=1.16.0"
slack-sdk = ">=3.21.3"
smart-open = ">=6.4.0"
sniffio = ">=1.3.1"
sortedcontainers = ">=2.4.0"
sounddevice = ">=0.4.6"
soundfile = ">=0.12.1"
soupsieve = ">=2.5"
soxr = ">=0.3.7"
spacy = ">=3.5.0"
spacy-legacy = ">=3.0.12"
spacy-loggers = ">=1.0.5"
sparkdesk-api = ">=1.5.0"
speechrecognition = ">=3.10.0"
sqlalchemy = ">=2.0.31"
srsly = ">=2.4.8"
sseclient-py = ">=1.8.0"
stack-data = ">=0.6.3"
starlette = ">=0.36.3"
sympy = ">=1.13.1"
tenacity = ">=8.5.0"
tensorboardx = ">=2.6.2.2"
thinc = ">=8.1.12"
threadpoolctl = ">=3.1.0"
tiktoken = ">=0.4.0"
tokenizers = ">=0.19.1"
tomlkit = ">=0.12.0"
toolz = ">=0.12.1"
torch = ">=2.1.2+cu121"
torch-complex = ">=0.4.4"
torchaudio = ">=2.1.2+cu121"
torchvision = ">=0.16.2+cu121"
tqdm = ">=4.66.4"
traitlets = ">=5.14.3"
transformers = ">=4.30.2"
trio = ">=0.24.0"
trio-websocket = ">=0.11.1"
typer = ">=0.7.0"
typing-inspect = ">=0.9.0"
typing-extensions = ">=4.12.2"
tzdata = ">=2024.1"
tzlocal = ">=5.2"
uc-micro-py = ">=1.0.3"
umap-learn = ">=0.5.6"
undetected-chromedriver = ">=3.5.5"
unofficial-claude2-api = ">=0.2.9"
uritemplate = ">=4.1.1"
urllib3 = ">=2.2.2"
uvicorn = ">=0.30.3"
vbuild = ">=0.8.2"
wasabi = ">=0.10.1"
watchfiles = ">=0.22.0"
wcwidth = ">=0.2.13"
websocket-client = ">=1.8.0"
websocket-client-py3 = ">=0.15.0"
websockets = ">=11.0.3"
webuiapi = ">=0.9.3"
werkzeug = ">=3.0.3"
win32-setctime = ">=1.1.0"
wincertstore = ">=0.2"
wsproto = ">=1.2.0"
yarl = ">=1.9.4"
zhipuai = ">=2.0.1.20240429"
zstandard = ">=0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
